# spotfunnel-voice-skills

./: .env.example  .gitignore  CLAUDE.md  INSTALL.md  LICENSE  README.md
base-agent-setup/: ENV_SETUP.md  SKILL.md
base-agent-setup/docs/: 2026-04-25-design.md  2026-04-25-implementation-plan.md  2026-04-25-verification-plan.md
base-agent-setup/prompts/: assemble-rough-system-prompt.md  generate-discovery-prompt.md  synthesize-brain-doc.md
base-agent-setup/reference-docs/: discovery-methodology.md
base-agent-setup/scripts/: _attach_base_tools.py  _remove_customer.py  _ultravox_safe_patch.py  attach-base-tools.sh  bulk-create-texml-apps.sh  cleanup-orphan-claims.sh  compose-prompt.sh  env-check.sh  fetch_lessons.py  firecrawl-scrape.sh  log_deployment.sh  refine-cluster-feedback.sh  refine-elevate-cluster.sh  refine-list-annotations.sh  refine-record-feedback.sh  refine-resolve-annotation.sh  refine-spawn-run.sh  regenerate-agent.sh  remove-customer.sh  resend-alert.sh  review-delete-feedback.sh  review-delete-lesson.sh  state.sh  (+10 more)
migrations/: README.md  operator_ui_agent_tools.sql  operator_ui_auth.sql  operator_ui_deployment_log.sql  operator_ui_schema.sql  operator_ui_spawn_run.sql
onboard-customer/: ENV_SETUP.md  SKILL.md
schema/: supabase-dashboard.sql
ui/server/: README.md  pyproject.toml
ui/server/tests/: auth_helpers.py  conftest.py  test_annotation_lifecycle.py  test_fetch_lessons.py  test_refine_flow.py  test_regenerate_agent.py  test_review_feedback.py  test_schema_roundtrip.py  test_schema_stress.py  test_verify.py
voice-stress-test/: SKILL.md
(+106 files in other folders)
